--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-index.html
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -224,13 +223,13 @@ index.html
         <p>&copy; 2023 SYFROM - Soluções em Intercomunicação de Redes e Infraestrutura</p>
         <div class="contact-info">
             <div class="contact-item">
-                <strong>Telefone:</strong> (XX) XXXX-XXXX
+                <strong>Telefone:</strong> (84) 99182-9190
             </div>
             <div class="contact-item">
                 <strong>E-mail:</strong> contato@syfrom.com.br
             </div>
             <div class="contact-item">
-                <strong>Endereço:</strong> Rua Exemplo, 123 - Centro - Cidade/UF
+                <strong>Endereço:</strong> Campus Parnamirim. Endereço: Rua Antônia de Lima Paiva, nº 155, Nova Esperança - Parnamirim-RN; CEP: 59143-455
             </div>
         </div>
     </footer>
